# pychoacoustics

./: .readthedocs.yaml  .travis.yml  BUGS.txt  CREDITS.txt  INSTALL.txt  MANIFEST.in  README.md  README.txt  TODO.txt  postinstall.py  pychoacoustics.desktop  pychoacoustics.pyw  pyproject.toml  pysdt.py  resources.qrc  setup-pyqt4.py  setup-pyqt6.py  setup-pyside.py  setup.py  setup_cx.py  sndlib.py  x-prm.xml
default_experiments/: __init__.py  audiogram.py  audiogram_mf.py  freq.py
icons/: Machovka_Headphones.icns
prep-release/: commit_changes.py  distbuild.sh  do_all.sh  do_all_pyside.sh  do_pyqt4.py  do_pyside.py  launchpad_build.py  launchpad_build_trusty.py  make_deb.py  mkupdate.sh  mkupdate2k.sh  mkupdate_pyqt4.sh  mkupdate_pyqt5.sh  mkupdate_pyqt6.sh  mkupdate_pyside.sh  publish.py  pychoacoustics.pro  pychoacoustics_el.ts  pychoacoustics_en_GB.ts  pychoacoustics_en_US.ts  pychoacoustics_es.ts  pychoacoustics_fr.ts  pychoacoustics_it.ts  pypi_build.sh  release.py  switch_pyqt5.py  switch_pyqt6.py  ubuntu_ppa_build_instructions.txt  uploadToWebsite.py  versioninfo.txt  win_installer_readme.md  win_launch_iss_compiler.bat  win_launch_iss_compiler.sh  win_pychoacoustics.iss  winbuild.py
pychoacoustics/: .directory  PSI_method.py  PSI_method2.py  PSI_method_est_guess.py  UML_method.py  UML_method_est_guess.py  __main__.py  _version_info.py  audio_manager.py  control_window.py  dialog_edit_end_message.py  dialog_edit_experimenters.py  dialog_edit_phones.py  dialog_edit_preferences.py  dialog_fit_psychometric_function.py  dialog_memory_file_parameters_differ.py  dialog_process_results.py  dialog_show_exp_doc.py  dialog_show_fortune.py  dialog_show_instructions.py  dialog_show_par_diff.py  dialog_swap_blocks.py  global_parameters.py  multirate.py  psi_method.py  pyqtver.py  pysdt.py  (+17 more)
(+204 files in other folders)
